implemented addons